<?xml version="1.0"?>
<package format="3">
  <name>services_quiz</name>
  <version>0.0.0</version>
  <description>Server and client for /turn</description>
  <maintainer email="bjahoor@uwaterloo.ca">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>services_quiz_srv</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
